--- a/quizzes/colors.html
+++ b/quizzes/colors.html
@@ -5,10 +5,12 @@
 </head>
 <body>
 <p style="background-color:Tomato;">Hello World</p>
-<h1 style="background-color:rgb(255, 99, 71);">Hello World</h1>
-<h1 style="background-color:#ff6347;">Hello World</h1>
-<h1 style="background-color:hsl(9, 100%, 64%);">...</h1>
-<h1 style="background-color:rgba(255, 99, 71, 0.5);">Hello World</h1>
+<h1 style="background-color:rgb(0, 199, 471);">Hello World</h1>
+<h1 style="background-color:rgb(99, 99, 99);">Hello World</h1>
+<h1 style="background-color:#ff6399;">Hello World</h1>
+<h1 style="background-color:#999999;">Hello World</h1>
+<h1 style="background-color:hsl(150, 70%, 55%);">...</h1>
+<h1 style="background-color:rgba(255, 99, 71, 0.1);">Hello World</h1>
 
 </body>
 </html>
