--- a/quizzes/simple-table.html
+++ b/quizzes/simple-table.html
@@ -1,7 +1,8 @@
+<!-- !DOCTYPE html - more for the developer -->
 <table border="1" width="100%">
     <tr>
         <th>ID</th>
-        <th width="50%">Name</th>
+        <th width="50%">Name</th> <!-- Changes formatting of name column -->
         <th>Course</th>
     </tr>
     <tr>
