--- a/quizzes/block-inline.html
+++ b/quizzes/block-inline.html
@@ -22,6 +22,7 @@
 
 <h2>Inline Elements</h2>
 <div>
+    <!-- Could also change <p> tags to <span> tags -->
     <p class = "inline">This is an inline element.</p>
     <p class = "inline">Inline elements do not start on a new line and only take up as much width as necessary.</p>
     <p class = "inline">They flow horizontally, allowing other elements to sit beside them.</p>
