--- a/quizzes/nested-list.html
+++ b/quizzes/nested-list.html
@@ -4,7 +4,7 @@
 <h3> Nested Lists </h3>
 <ul>
     <li>CSE316</li>
-    <ol>
+    <ol type = "a">
         <li>HTML</li>
         <li>CSS</li>
     </ol>
